--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,37 @@
   </head>
 
   <body>
+    <section class="hero is-primary is-medium">
+      <!-- Hero head: will stick at top -->
+      <div clas="hero-head">
+        <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <%= link_to 'Demo Blog', root_path, class: 'navbar-item' %>
+              <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+                <span></span>
+                <span></span>
+                <span></span>
+              </span> <!-- navbar-burger -->
+            </div> <!-- navbar-brand -->
+            <div id="navbarMenuHeroA" class="navbar-menu">
+              <div class="navbar-end">
+                <%= link_to 'Create New Post', new_post_path, class: 'navbar-item' %>
+              </div> <!-- navbar-end -->
+            </div> <!-- navbar-meun -->
+          </div> <!-- container -->
+        </nav> <!-- navbar -->
+      </div> <!-- hero-head -->
+
+      <!-- Hero content: will be in the middle -->
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title">
+            <%= yield :page_title %>
+          </h1>
+        </div> <!-- container -->
+      </div> <!-- hero-body -->
+    </section> <!-- hero -->
     <%= yield %>
   </body>
 </html>
