--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,7 @@
+<% content_for :page_title, @post.title %>
+
 <section class="section">
     <div class="container">
-        <h1 class="title">
-            <%= @post.title %>
-        </h1>
         <div class="content">
             <%= @post.content %>
         </div>
