--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,30 @@
 
 <section class="section">
     <div class="container">
+        <nav class="level">
+
+            <!-- left side -->
+            <div class="level-left">
+                <p class="level-item">
+                    <strong>Actions</strong>
+                </p> <!-- level-item -->
+            </div> <!-- level-left -->
+
+            <!-- right side -->
+            <div class="level-right">
+                <p class="level-item">
+                    <%= link_to 'Edit', edit_post_path(@post), class: 'button' %>
+                </p> <!-- level-item -->
+                <p class="level-item">
+                    <!-- TODO: Add functionality -->
+                    <a class="button is-danger">Delete</a>
+                </p> <!-- level-item -->
+            </div> <!-- level-right -->
+
+        </nav> <!-- level -->
+
+        <hr />
+        
         <div class="content">
             <%= @post.content %>
         </div>
