add comments and some final cleanup

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
                     <%= post.content %>
                 </div>
                 <div class="comment-count">
-                    <span class="tag is-rounded"><%# comment count %></span>
+                    <span class="tag is-rounded"><%= post.comments.count %> Comment(s)</span>
                 </div>
             </div>
         <% end %>
